--- a/index.html
+++ b/index.html
@@ -30,8 +30,19 @@
         </ul>
       </nav>
 
+      <header class="main-header">
+        <img src="img/fun-bus.jpg" alt="" />
+        <h1>Welcome To Fun Bus</h1>
+        <p>
+          Traveling expedition modern, clean webdesign blogger clean website
+          theme website modern. Design pretty design, travelblogger adventure
+          WordPress wanderlust theme blogger website expedition theme
+          travelblogger. Adventure fun traveler pretty design website
+          expedition.
+        </p>
+      </header>
+
       <section class="content-section">
-        <header class="main-header"></header>
         <div class="text-content">
           <h2>Let's Go!</h2>
           <p>
