--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
           <div class="btn">Sign Me Up!</div>
         </div>
       </section>
+      <section class="main-form">
+        <form>
+          <label for="vacation"></label>
+        </form>
+      </section>
     </div>
     <!-- container -->
 
