--- a/index.html
+++ b/index.html
@@ -119,9 +119,27 @@
         </div>
       </section>
       <section class="main-form">
+        <h1>Pick your dream vacation</h1>
         <form>
-          <label for="vacation"></label>
+          <div class="form-top">
+            <label for="vacation1">Choose Here</label> <br />
+            <input type="checkbox" /> <span>Fun In The Sun</span> <br />
+            <input type="checkbox" /> <span>Mountain Excursion</span> <br />
+            <input type="checkbox" /> <span>Island Getaway</span>
+            <br />
+          </div>
+          <div class="form-bottom">
+            <label for="name">Enter Name:</label>
+            <input type="text" placeholder="Enter name here" />
+            <label for="email">Enter Email:</label>
+            <input type="text" placeholder="Enter email here" />
+            <label for="Phone">Enter Phone Number:</label>
+            <input type="text" placeholder="Enter phone number here" />
+            <label for="message">Enter Instructions</label>
+            <textarea placeholder="Special instructions"></textarea>
+          </div>
         </form>
+        <a href="#">Submit</a>
       </section>
     </div>
     <!-- container -->
